5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1865_1540.log
== TEST (2019-07-04 10:24:36) 
-- CODE:
from math import*

a=eval(input("entre com o angulo:"))
k=int(input("entre com a constante:"))

i=0
j=1
while(i<K):
	a=j**(i)/factorial(i+1)+a
print(a)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(i<K):
NameError: name 'K' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:25:17) 
-- CODE:
from math import*

a=eval(input("entre com o angulo:"))
k=int(input("entre com a constante:"))

i=0
j=1
while(i<K):
	a=j**(i)/factorial(i+1)+a
print(a)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(i<K):
NameError: name 'K' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:25:42) 
-- CODE:
from math import*

a=eval(input("entre com o angulo:"))
k=int(input("entre com a constante:"))

i=0
j=1
while(i<k):
	a=j**(i)/factorial(i+1)+a
print(a)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(i<K):
NameError: name 'K' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:38:48) 
-- CODE:
from math import*

a=eval(input("entre com o angulo:"))
k=int(input("entre com a constante:"))

i=0
j=1
while(i<k):
	a=j**(i)/factorial(i**(i+1))+a
print(a)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(i<K):
NameError: name 'K' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:38:58) 
-- CODE:
from math import*

a=eval(input("entre com o angulo:"))
k=int(input("entre com a constante:"))

i=0
j=1
while(i<k):
	a=j**(i)/factorial(i**(i+1))+a
print(a)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(i<K):
NameError: name 'K' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:39:10) 
-- CODE:
from math import*

a=eval(input("entre com o angulo:"))
k=int(input("entre com a constante:"))

i=0
j=1
while(i<k):
	a=j**(i)/factorial(i**(i+1))+a
print(a)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(i<K):
NameError: name 'K' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:40:20) 
-- CODE:
from math import*

a=eval(input("entre com o angulo:"))
k=int(input("entre com a constante:"))

i=0
j=1
while(k>i):
	a=j**(i)/factorial(i**(i+1))+a
	
	i=i+1
	j=j+1
print(a)	
	
-- OUTPUT:
4.233923764421885
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:41:03) 
-- CODE:
from math import*

a=eval(input("entre com o angulo:"))
k=int(input("entre com a constante:"))

i=0
j=1
while(k>i):
	a=(j**(i+1)/factorial(i+1))+a
	
	i=i+1
	j=j+1
print(a)	
	
-- OUTPUT:
8.73370055013617
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:08) 
-- CODE:
from math import*

a=eval(input("entre com o angulo:"))
k=int(input("entre com a constante:"))

i=0
j=1
a
while(k>i):
	a=(j**(i+1)/factorial(i+2))+a
	
	i=i+1
	j=j+1
print(a)	
	
-- OUTPUT:
3.5253672168028363
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:27) 
-- CODE:
from math import*

a=eval(input("entre com o angulo:"))
k=int(input("entre com a constante:"))

i=0
j=1
a
while(k>i):
	a=(j**(i+1)/factorial(i+2))+a
	
	i=i+1
	j=j+1
print(a)	
	
-- OUTPUT:
3.5253672168028363
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:46:50) 
-- CODE:
from math import*

a=eval(input("entre com o angulo:"))
k=int(input("entre com a constante:"))

i=0
j=1

while(k>i):
	a=((j**(i+1)/factorial(i+2))**(-1*i))+a
	
	i=i+1
	j=j+1
print(a)	
	
-- OUTPUT:
4.523824006926294
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:46:58) 
-- CODE:
from math import*

a=eval(input("entre com o angulo:"))
k=int(input("entre com a constante:"))

i=0
j=1

while(k>i):
	a=((j**(i+1)/factorial(i+2))**(-1*i))+a
	
	i=i+1
	j=j+1
print(a)	
	
-- OUTPUT:
4.523824006926294
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:49:37) 
-- CODE:
from math import*

a=eval(input("entre com o angulo:"))
k=int(input("entre com a constante:"))

i=0
j=1

while(k>i):
	a=((j**(i+1)/factorial(i**(i)-2))**(-1*i))+a
	
	i=i+1
	j=j+1
print(a)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    a=((j**(i+1)/factorial(i**(i)-2))**(-1*i))+a
ValueError: factorial() not defined for negative values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:49:59) 
-- CODE:
from math import*

a=eval(input("entre com o angulo:"))
k=int(input("entre com a constante:"))

i=0
j=1

while(k>i):
	a=((j**(i+1)/factorial((i**(i))-2))**(-1*i))+a
	
	i=i+1
	j=j+1
print(a)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    a=((j**(i+1)/factorial((i**(i))-2))**(-1*i))+a
ValueError: factorial() not defined for negative values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:51:36) 
-- CODE:
from math import*

a=eval(input("entre com o angulo:"))
k=int(input("entre com a constante:"))

i=0
j=1

while(k>i):
	r=((a**(i+1)/factorial(i+2))*(-1*i))+r
	
	i=i+1
	j=j+1
print(a)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    r=((a**(i+1)/factorial(i+2))*(-1*i))+r
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:52:03) 
-- CODE:
from math import*

a=eval(input("entre com o angulo:"))
k=int(input("entre com a constante:"))

i=0
j=1

while(k>i):
	=((a**(i+1)/factorial(i+2))*(-1*i))+r
	
	i=i+1
	j=j+1
print(a)	
	
-- ERROR:
File "XXXX", line 10
    =((a**(i+1)/factorial(i+2))*(-1*i))+r
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
